@@ -15,7 +15,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 @AllArgsConstructor
@@ -36,7 +36,7 @@ public class EthnicityVillageService {
         return ethnicityVillages
                 .stream()
                 .map(this::ethnicityVillageToEthnicityVillageDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EthnicityVillageDTO getEthnicityVillageById(Long id) {
